Failed to fetch huawei:latest image when running Jenkins job
Issue-ID: VFC-1864

Signed-off-by: abhishek bajaj <abhishek.kumar.bajaj@huawei.com>
Change-Id: I6a2404da2b14ea2459c23af7efceb18bf3143649